# NIDS

./: CMakeLists.txt  README.md
config/: nids_config.json
docs/: README.md  architecture.md
docs/api/: README.md
docs/configuration/: README.md
docs/getting-started/: README.md
scripts/: build.ps1  build.sh
src/: main.cpp
src/core/: ConfigManager.hpp  PacketCapture.hpp
src/detection/: DetectionEngine.hpp
src/distributed/: DistributedMonitor.hpp
src/forensics/: NetworkForensics.hpp
src/incident_response/: AutomatedResponse.hpp
src/ml/: AnomalyDetector.hpp
src/threat_intel/: ThreatComponents.hpp  ThreatIntelligence.hpp
src/visualization/: NetworkVisualizer.hpp
tests/integration/: SystemIntegrationTests.hpp
tests/unit/: ThreatIntelTests.hpp
